# Trigonometric_Solution_LaPaz_1949

./: CMakeLists.txt  main.cpp
excerpt/: excerpt.h
excerpt/inc/: excerpt.h
excerpt/src/: CMakeLists.txt  excerpt.cpp
